--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,12 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.9",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "orchestra/parser": "^8.0",
+        "socialiteproviders/github": "^4.1",
+        "socialiteproviders/vkontakte": "^5.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
@@ -26,7 +30,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
+            "Database\\Factories\\": "database/EloquentModels/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
     },
