--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/socialite": "^5.9",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.2",
-        "orchestra/parser": "^8.0",
-        "socialiteproviders/github": "^4.1",
-        "socialiteproviders/vkontakte": "^5.0"
+        "laravel/ui": "^4.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
@@ -30,7 +26,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Database\\Factories\\": "database/EloquentModels/factories/",
+            "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
     },
